--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,6 @@
-rock_testsuite(test_suite suite.cpp
-   test_Dummy.cpp
+rock_gtest(test_suite suite.cpp
+   test_SatcommsStatusManager.cpp
    DEPS satcomms_kvh)
+
+set_tests_properties(test-test_suite-cxx PROPERTIES ENVIRONMENT
+   "SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
