feat: add timestamp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,8 @@ include_directories(${CURL_INCLUDE_DIRS})
 
 rock_library(satcomms_kvh
     SOURCES SatcommsStatusManager.cpp
-    HEADERS SatcommsStatusManager.hpp SatcommsStatus.hpp)
+    HEADERS SatcommsStatusManager.hpp SatcommsStatus.hpp
+    DEPS_PKGCONFIG base-types)
 
 target_link_libraries(satcomms_kvh ${Boost_LIBRARIES})
 target_link_libraries(satcomms_kvh ${CURL_LIBRARIES})
