--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CURL_INCLUDE_DIRS})
 rock_library(satcomms_kvh
     SOURCES SatcommsStatusManager.cpp
     HEADERS SatcommsStatusManager.hpp SatcommsStatus.hpp
-    DEPS_PKGCONFIG base-types)
+    DEPS_PKGCONFIG base-types base-logging)
 
 target_link_libraries(satcomms_kvh ${Boost_LIBRARIES})
 target_link_libraries(satcomms_kvh ${CURL_LIBRARIES})
