--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 rock_gtest(test_suite suite.cpp
    test_SatcommsStatusManager.cpp
-   DEPS satcomms_kvh)
+   DEPS satcomms_kvh
+   DEPS_CMAKE CURL)
 
 set_tests_properties(test-test_suite-cxx PROPERTIES ENVIRONMENT
    "SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR}")
